# Randomini

./: .conf  README.md  main.py  project.xml  pyproject.toml  requirements.txt
src/: app.py  config.py
src/excel/: dependencies.py  repositories.py  router.py  services.py
src/static/js/: roulette.js
src/templates/: __init__.py  base.html  roulette.html
