[project]
name = "randomini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "et-xmlfile==2.0.0",
    "fastapi==0.116.1",
    "h11==0.16.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "openpyxl==3.1.5",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings>=2.10.1",
    "python-multipart==0.0.20",
    "sniffio==1.3.1",
    "starlette==0.47.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
]
